--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./js/app.js"></script>
+    <script src="./js/app2.js"></script>
 </body>
 </html>
