Added: SNACK 4 - printed on page

--- a/SNACK 4/index.html
+++ b/SNACK 4/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        table,
+        table th,
+        table td{
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <table class="table">
+                <tr>
+                    <th>Nome Squadra</th>
+                    <th>Punti Squadra</th>
+                    <th>Falli Squadra</th>
+                </tr>
+            </table>
+        </div>
+    </div>
     <script src="./js/app.js"></script>
 </body>
 </html>
